Added the banner section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop - Assignment</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,700;1,900&family=Poppins:ital,wght@0,200;0,400;0,500;0,800;1,400;1,500&display=swap" rel="stylesheet">
     <!-- main Stylesheet -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -27,5 +33,39 @@
         </div>
     </header>
     <!-- Header Section End -->
+
+    <!-- Banner Section Start -->
+    <section class="banner_wrapper">
+        <div class="banner_content">
+            <div class="banner_textbtn">
+                <h3>Love flowers and Feel it Deeply</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <button class="primary_btn"><a href="#">Shop Now</a></button>
+            </div>
+            <div class="banner_image">
+                <img src="asset/f1.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Banner Section End -->
+
+    <!-- About Us Section Start -->
+    <section class="about_wrapper">
+        <div class="about_content">
+            <h3>A Little About Our Shop</h3>
+            <div class="about_parts">
+                <div class="about_img">
+                    <img src="asset/about.jpg" alt="">
+                </div>
+                <div class="about_text">
+                    <h4>We Love Flowers</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi officia provident suscipit. Quam omnis eum in libero eligendi doloribus nam dignissimos magni consequuntur suscipit quaerat nisi autem</p>
+                    <button class="secondary_btn"><a href="#">Know More</a></button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- About Us Section End -->
+
 </body>
 </html>
