--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <!-- About Us Section Start -->
     <section class="about_wrapper">
         <div class="about_content">
-            <h3>A Little About Our Shop</h3>
+            
             <div class="about_parts">
                 <div class="about_img">
                     <img src="asset/about.jpg" alt="">
                 </div>
                 <div class="about_text">
-                    <h4>We Love Flowers</h3>
+                    <h4>A Little About Us</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi officia provident suscipit. Quam omnis eum in libero eligendi doloribus nam dignissimos magni consequuntur suscipit quaerat nisi autem</p>
                     <button class="secondary_btn"><a href="#">Know More</a></button>
                 </div>
