--- a/index.html
+++ b/index.html
@@ -67,5 +67,55 @@
     </section>
     <!-- About Us Section End -->
 
+    <!-- Featured Section Start -->
+    <section class="featured_wrapper">
+        <div class="featured_content">
+            <h3>Our Featured flowers</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+            <div class="three_items_wrapper">
+                <div class="single_item single_bg1">
+                    <img src="asset/pngwing 6.png" alt="Flower">
+                </div>
+                <div class="single_item single_bg2">
+                    <img src="asset/pngwing 5.png" alt="Flower">
+                </div>
+                <div class="single_item single_bg3"> 
+                    <img src="asset/pngwing 7.png" alt="Flower">
+                </div>
+            </div>
+            <div class="only_text_area">
+                <div class="one">
+                    <a href="#">Pink Flower Tree</a>
+                </div> 
+                <div class="two">
+                    <a href="#">Pink Flower Tree</a>
+                </div> 
+                <div class="three">
+                    <a href="#">Pink Flower Tree</a>
+                </div> 
+            </div>
+        </div>
+    </section>
+    <!-- Featured Section End -->
+
+    <!-- Features Section Start -->
+    <section class="feature_wrapper">
+        <div class="feature_content">
+            <div class="item">
+                <img src="asset/Group 57.png" alt="Icon">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div class="item">
+                <img src="asset/Group 58.png" alt="Icon">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div class="item">
+                <img src="asset/Group 59.png" alt="Icon">
+                <p>24/7 Free Support.</p>
+            </div>
+        </div>
+    </section>
+    <!-- Features Section End -->
+
 </body>
 </html>
