Added the Insta section

--- a/index.html
+++ b/index.html
@@ -117,5 +117,43 @@
     </section>
     <!-- Features Section End -->
 
+    <!-- Hot Deal Section Start -->
+    <section class="hot_deal_wrapper">
+        <div class="hot_deal_content">
+            <div class="off_section">
+                <h3>Hot Deal ! Sale Up To 25% <span class="off">Off</span></h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="primary_btn"><a href="#">Sign Up</a></button>
+            </div>
+            <div class="flower_image_section">
+                <img src="asset/pngwing 8.png" alt="image">
+            </div>
+        </div>
+    </section>
+    <!-- Dot Deal Section End -->
+
+    <!-- Insta Section Start -->
+    <section class="insta_wrapper">
+        <div class="insta_content">
+            <h3>Instagram</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <div class="insta_image_wrapper">
+                <div class="single_img">
+                    <img src="asset/Rectangle 4.png" alt="Rectangle">
+                </div>
+                <div class="single_img">
+                    <img src="asset/Rectangle 5.png" alt="Rectangle">
+                </div>
+                <div class="single_img">
+                    <img src="asset/Rectangle 6.png" alt="Rectangle">
+                </div>
+                <div class="single_img">
+                    <img src="asset/Flower 01.png" alt="Rectangle">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Insta Section End -->
+
 </body>
 </html>
