Added the newlatter section

--- a/index.html
+++ b/index.html
@@ -155,5 +155,21 @@
     </section>
     <!-- Insta Section End -->
 
+    <!-- Newlatter Section Start -->
+    <section class="newlatter_wrapper">
+        <div class="newlatter_content">
+            <div class="main_content">
+                <h3>Get The Latest Deals</h3>
+                <p>$30 Coupon for first shopping</p>
+                <div class="input_box">
+                    <input type="text" placeholder="Enter your email here">
+                    <button class="nl_button"><a href="#">Subscribe</a></button>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!-- Newlatter Section End -->
+
 </body>
 </html>
