Added the footer section

--- a/index.html
+++ b/index.html
@@ -171,5 +171,15 @@
     </section>
     <!-- Newlatter Section End -->
 
+    <!-- Footer Section Start -->
+    <section class="footer_wrapper">
+        <div class="footer_content">
+            <h1>Flower<span>Shop</span></h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
+        </div>
+    </section>
+    <!-- Footer Section End -->
+
 </body>
 </html>
