This is the final commit for this project

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h3>Get The Latest Deals</h3>
                 <p>$30 Coupon for first shopping</p>
                 <div class="input_box">
-                    <input type="text" placeholder="Enter your email here">
+                    <input type="text" placeholder="Enter your email here....">
                     <button class="nl_button"><a href="#">Subscribe</a></button>
                 </div>
                 
